# highorder

./: .gitignore  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
app/: .gitignore  jest.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
app/public/assets/chengyu_relay/: chengyu.json
app/src/: ad.ts  app.ts  client.ts  components.module.css  components.ts  core.ts  db.ts  defines.ts  env.d.ts  index.css  index.ts  platform.ts
app/src/common/: locales.json  richtext.ts  utils.ts
app/src/motion/: book_flip.vue  confetti.ts  one_picture.vue  sea_bird.module.css  sea_bird.ts  sea_sunset.module.css  sea_sunset.ts  sleep_cat.vue  wall_grass.vue  wall_vines.vue
app/src/playable/: catchcat.ts  chengyu_cross.ts  chengyu_relay.ts  chengyu_wordle.data.json  chengyu_wordle.module.css  chengyu_wordle.ts  cutfruit.ts  rotate_right.ts  shici_blank.ts  threetiles.ts  word_figureout.module.css  word_figureout.ts
app/src/styles/retro/: retro.module.css  retro.ts
app/tests/: richtext.test.ts  utils.test.ts
apps/highorder-app/: pnpm-lock.yaml
apps/highorder-app/src-tauri/icons/: icon.icns
apps/lite-mpy/: README.md
apps/lite-mpy/liteapp/: config.py  core.py  lcd.py  lvgl_demo.py  main.py  render.py
apps/lite-mpy/tools/: genfont.sh
apps/simulator/: README.md  index.html  package.json  vite.config.js
apps/simulator/src/: main.jsx
apps/webapp/: README.md  index.html  package.json  vite.config.js
apps/webapp/src/: main.jsx
components/appview/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.mjs
components/appview/src/: App.jsx  index.css
components/appview/src/i18n/: locales.js
components/appview/src/store/: appStore.js
components/appview/src/utils/: index.js
components/codemirror-hola/: .gitignore  vite.config.js
components/codemirror-hola/src/: highlight.js  hola.grammar
components/hola-compiler/src/: index.js
components/hola-compiler/tests/: index.test.js
crates/highorder/: Cargo.toml
crates/highorder/src/: config.rs  db.rs  error.rs  hola.rs  loader.rs  main.rs  migration.rs  models.rs
crates/hola_expr/src/: expr_parser.rs  position.rs  stmt_parser.rs
crates/hola_parser/: Cargo.toml
crates/hola_parser/examples/: color_division_demo.rs  diagnostic_demo.rs  new_features_demo.rs
crates/hola_parser/src/: ast.rs  compiler.rs  error.rs  expression_parser.rs  lib.rs  name_transform.rs  parser.rs  position.rs  token_stream.rs  tokenizer.rs
crates/hola_parser/tests/: debug_tokenizer.rs  expr_extensions_test.rs  integration_expr_extensions.rs  integration_parse.rs  test_color_and_division.rs  test_diagnostics.rs  test_position_tracking.rs
crates/hola_vm/: Cargo.toml  DESIGN.md
crates/hola_vm/examples/: advanced_opcodes_demo.rs  basic_arithmetic.rs  bitwise_operations_demo.rs  conditional_jump.rs  exception_and_function_demo.rs  object_and_math_demo.rs  string_stack_operations.rs  tuples_and_ranges.rs
crates/hola_vm/src/: formatter.rs  lib.rs  opcode.rs  stack.rs  value.rs  vm_core.rs
crates/server/: Cargo.toml
crates/server/src/: db.rs  models.rs  schema.rs
crates/server/src/base/: mod.rs
desktop/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
desktop/src/: app.conf.json  main.ts
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
docs/: .gitignore  docusaurus.config.cjs  package-lock.json  package.json  pnpm-lock.yaml
docs/docs/: index.md
docs/docs/.vitepress/: config.ts
docs/docs/en/: index.md
docs/docs/hola/: NAMESPACE_FEATURE.md  hola-grammar.ebnf  hola-grammar.peg
docs/docs/hola/examples/: anonymous_objects.hola  comments.hola  (+6 more)
editor/: .gitignore  README.md  pyproject.toml  settings.toml  setup.py
editor/highorder_editor/: __main__.py  cli.py
editor/highorder_editor/base/: decompiler.py  fs.py  helpers.py
editor/highorder_editor/service/: __init__.py  application.py  auth.py
editor/highorder_editor/view/: __init__.py  application.py  common.py
editor/highorder_editor/www/: editor.css
highorder-app/: package.json
highorder-app/src-tauri/: Cargo.toml  tauri.conf.json
highorder-app/src-tauri/src/: main.rs
hola/: hola-grammar.ebnf  language-spec.md
launcher/: Cargo.toml  package-lock.json  package.json
launcher/src/: main.rs
launcher/src-tauri/: tauri.conf.json
lite-mpy/liteapp/: boot.py  test.py  touch.py
mobile/: README.md
mobile/app/: .env.staging  .gitignore  README.md  capacitor.config.ts  package-lock.json  package.json  tsconfig.json  vite.config.ts
mobile/app/android/: capacitor.settings.gradle
mobile/app/src/: config.json  main.ts
server/: .gitignore  README.md  pyproject.toml  settings.toml  setup.py  tox.ini
server/docs/: style.md
server/highorder/: __main__.py  boot.py  main.py  servicedef.py
server/highorder/account/: extension.py  model.py  service.py  view.py
server/highorder/base/: compiler.py  configdata.py  error.py  instant.py  instant_db.py  loader.py  model.py  munch.py  router.py  utils.py
server/highorder/cli/: __main__.py
server/highorder/hola/: account.py  builtin.py  data.py  extension.py  htmldoc.py  model.py  service.py  transformer.py  view.py
server/highorder/quest/: data.py  model.py  service.py  view.py
server/tests/: test_compiler.py  test_hola_builtin.py  test_transformer.py  test_utils.py
simulator/: README.md  index.html  package-lock.json  package.json  vite.config.ts
simulator/src/: main.ts
sitepress/: package.json
super/: Cargo.toml
super/crates/hola_expr/: Cargo.toml
super/server/: Cargo.toml
super/server/src/: main.rs
super/server/src/base/: compiler.rs
super/web/: Cargo.toml  Dioxus.toml
super/web/src/: main.rs
theme/: .gitignore  README.md  build_themes.sh  package.json
theme/theme-base/: _components.scss  _ho_components.scss
web/: package.json  pnpm-lock.yaml  tailwind.config.js
web/src/: App.jsx  index.css
webapp/: README.md  index.html  package-lock.json  package.json  vite.config.ts
webapp/src/: main.ts
(+103 files in other folders)
