[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highorder_editor"
dynamic = ["version"]
description = "HighOrder Editor"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL"}
dependencies = [
    "basepy",
    "peewee",
    "httpx",
    "wavegui",
    "typer",
    "rich",
    "dataclass_factory",
    "highorder",
]

[project.scripts]
highorder-editor-cli = "highorder_editor.cli:main"

[tool.hatch.version]
path = "highorder_editor/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["highorder_editor"]
include = [
    "highorder_editor/**",
]

[tool.uv.sources]
basepy = { path = "../server/packages/basepy" }
likepy = { path = "../server/packages/likepy" }
callpy = { path = "../server/packages/callpy" }
postmodel = { path = "../server/packages/postmodel" }
highorder = { path = "../server" }
