[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "highorder"
dynamic = ["version"]
description = "HighOrder Server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "callpy>=0.4.0",
    "aiobotocore",
    "asyncpg",
    "basepy>=0.5",
    "httpx",
    "phonenumbers",
    "arrow",
    "dataclass_factory",
    "likepy>=0.3.0",
    "postmodel>=0.3.0",
    "dominate==2.9.1",
    "html5lib==1.1",
    "aiofiles",
    "rich",
]

[project.optional-dependencies]
test = [
    "asynctest",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[tool.setuptools]
packages = {find = {include = ["highorder", "highorder.*"]}}
zip-safe = true
include-package-data = false

[tool.setuptools.dynamic]
version = {attr = "highorder.__version__"}

[tool.uv]
python-version = "3.11"
exclude = []
