[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "highorder"
dynamic = ["version"]
description = "HighOrder Server"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
]
dependencies = [
    "callpy>=0.4.0",
    "basepy>=0.5",
    "likepy>=0.3.0",
    "postmodel>=0.3.0",
    "asyncpg",
    "httpx",
    "phonenumbers",
    "arrow",
    "dataclass_factory",
    "dominate==2.9.1",
    "html5lib==1.1",
    "aiofiles",
    "rich",
    "highorder_editor",
]

[project.optional-dependencies]
test = [
    "asynctest",
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "pytest-mock",
]

[tool.hatch.build.targets.wheel]
packages = ["highorder"]

[tool.hatch.version]
path = "highorder/__init__.py"

[project.scripts]
highorder = "highorder.__main__:main"
highorder-editor = "highorder_editor.__main__:main"

[tool.uv]

[tool.uv.workspace]
members = [".", "packages/*"]

[tool.uv.sources]
basepy = {workspace = true}
likepy = {workspace = true}
callpy = {workspace = true}
postmodel = {workspace = true}
wavegui = {workspace = true}
highorder_editor = { workspace = true }