[package]
name = "highorder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "http2", "multipart", "macros", "tracing", "headers"] }
lazy_static = "1.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.32.0", features = ["full"] }

# Database dependencies
sea-orm = { version = "0.12", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls", "macros", "with-chrono", "with-json"] }
sea-orm-migration = { version = "0.12", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-rustls"] }
dotenv = "0.15.0"
chrono = { version = "0.4.26", features = ["serde"] }

# Validation dependencies (similar to Pydantic)
validator = { version = "0.16", features = ["derive"] }
validator_derive = "0.16"

# Static files, config and tracing
tower-http = { version = "0.4", features = ["fs", "trace"] }
config = { version = "0.14", features = ["toml"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
hmac = "0.12"
sha2 = "0.10"
anyhow = "1.0"
mime_guess = "2.0"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
hex = "0.4"
async-trait = "0.1"
tower = "0.4"

# Embedded Postgres for local development
postgresql_embedded = { version = "0.20", default-features = false, features = ["tokio", "rustls", "theseus"] }
