[package]
name = "highorder_ultra"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.20", features = ["ws", "http2", "multipart", "macros", "tracing", "headers"] }
lazy_static = "1.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
tokio = { version = "1.32.0", features = ["full"] }
